implemented url for locating add page. Completed home inheritance from layout template. project views renders welcome page. admin.py setup to allow admin access to db.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
-{% load static from staticfiles %}
 {% block title %} Welcome Page {% endblock %}
 
 {% block content %}
-
-
+	blah
 {% endblock %}
