--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,3 @@
-{% load static from staticfiles %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +7,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
@@ -23,8 +20,8 @@
       padding: 25px;
     }
 
-    .margin-bottom-250{
-    	margin-bottom: 250px;
+    .min-height{
+    	min-height:220px;
     }
   </style>
 </head>
@@ -38,13 +35,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Portfolio</a>
+      <a class="navbar-brand" href="#">Infostore</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#"></a></li>
-        <li><a href="#">Add</a></li>
+        <li><a href="{% url 'create' %}">Add</a></li>
         <li><a href="#">List</a></li>
       </ul>
      
@@ -54,12 +51,14 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>Info Store</h1>      
-    <p>Some text that represents "Me"...</p>
+    <h1>Information Store</h1>      
+    <p>Welcome</p>
   </div>
 </div>
 
-<div class="margin-bottom-250">blah</div>
+<div class="min-height">
+	{% block content %}{% endblock %}
+</div>
 
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
