Implemented list from db functionality. Implemented get_absolute_url feature for createvie after successful execution.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,7 +42,7 @@
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#"></a></li>
         <li><a href="{% url 'create' %}">Add</a></li>
-        <li><a href="#">List</a></li>
+        <li><a href="{% url 'list' %}">List</a></li>
       </ul>
      
     </div>
